[package]
name = "vmatrix"
version = "0.1.0"
authors = ["Kent Fredric <kentnl@gentoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.toml]
version = "^0.5"
default_features = false

[dependencies.serde]
version = "^1"
default_features = false
features = ["derive"]

[dependencies.serde_derive]
version = "^1"
default_features = false

[dependencies.serde_json]
version = "^1"
default_features = false
features = ["std"]

[dependencies.askama]
version = "^0.10"
default_features = false
